         working working with 8Kb pages again.
20110509 machine.[ch],machines/{pentagon1024.c,pentagon512.c,pentagon.c,
         scorpion.c,spec128.c,spec16.c,spec48.c,spec48_ntsc.c,specplus2a.c,
         specplus2.c,specplus3.c,specplus3e.c,spec_se.c,tc2048.c,tc2068.c,
         ts2068.c},memory.[ch], peripherals/{disk/beta.c,disciple.c,opus.c,
         plusd.c},if1.c,if2.c,speccyboot.c}: get 128K machine working with 4Kb
         pages.
20110509 machines/machines_periph.c,peripherals/ay.c,periph.h: reading from
         port 0xbffd on +2A/+3 was lost in peripheral refactoring (thanks,
         fusetest).
20110510 machines/specplus3.c: get +3 to work with a page size of 4Kb.
20110511 compat/unix/tuntap.c: add missing #include <string.h>.
20110511 machines/spec16.c: get 16K Spectrum working with a page size of 4Kb.
20110514 tape.c: add case for set signal level block (Fred).
20110514 tape.c: we want to allow 0 tstate blocks to twiddle the mic to
         accomodate the set signal level block (Fred).
20110515 machines/tc2048.c,memory.h,peripherals/scld.[ch]: get TC2048 working
         with a page size of 4Kb.
20110515 memory.h: back out accidental commit of page size change.
20110515 scld.c: use right port number when restoring SCLD state from snapshot
         (makes no functional difference as we ignore the port number anyway).
20110516 machines/{tc2048.c,tc2068.[ch],ts2068.c},memory.h: get TC/TS2068
         working with 4Kb pages.
20110531 peripherals/dck.c: ensure pages loaded from .dck files get saved back
         into snapshots.
20110601 peripherals/{dck.c,scld.c}: make .dck files and snapshots containing
         DOCK/EXROM work with 4Kb pages.
20110602 machines/{pentagon1024.c,pentagon512.c,scorpion.c},memory.[ch],
         peripherals/disk/beta.[ch]: get Russian machines working with 4Kb
         pages.
20110604 memory.h,peripherals/spectranet.c: Spectranet code now at least does
         something.